--- a/frontend/src/assets/stylesheets/main/details-widget.css
+++ b/frontend/src/assets/stylesheets/main/details-widget.css
@@ -17,64 +17,131 @@ font-family: 'Inconsolata', monospace;
     line-height: 36px;
     font-size: 20px;
     background: white;
-    border: 1px #cdcdcd solid;
+    /* border: 1px #cdcdcd solid; */
     padding: 10px;
-    margin: 10px 0 20px;
+    margin: 10px 0 50px;
     box-shadow: 5px 10px 18px #888888;
+}
+
+.details-widget strong {
+    font-weight: 800;
 }
 /* functionality */
 .game-pad {
     display: flex;
-    height: 200px;
-    
+    /* height: 200px; */
+    /* border: solid 10px #888888; */
+    box-shadow: 5px 10px 18px #888888;
+    padding: 10px 0;
+    justify-content: space-around;
+    /* background: black; */
 }
 
-.game-pad > * {
-    box-sizing: border-box;
-    border: solid 1px green;
+.game-pad * {
+    outline: none;
 }
 
-.game-pad .arrows {
-    width: 150px;
-    margin: auto;
+.game-pad .direction-pad {
+    width: 120px;
+    /* margin: 60px 0 0; */
     display: grid;
-    grid-template-rows: 50px 50px 50px;
-    grid-template-columns: 50px 50px 50px;
-    background: black;
+    grid-template-rows: 40px 40px 40px;
+    grid-template-columns: 40px 40px 40px;
 }
 
-.game-pad .arrows div {
+.game-pad .direction-pad div {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 48px;
-    background: darkgray;
-    border-radius: 10px;
+    font-size: 45px;
+    color: #888888;
 }
 
-.arrows div.arrow {
-    background: black;
+.direction-pad .arrow {
+    /* border: solid 1px #888888; */
+    box-shadow: inset 0 0 6px 1px #888888; 
+    border-radius: 40px;
+    /* text-shadow: -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black; */
+    cursor:pointer;
 }
-
-.arrows .down-arrow{
+.direction-pad .down-arrow{
     transform: rotate(-180deg);
 
 }
 
-.arrows .blank {}
+.direction-pad .middle span {
+    display: inline-block;
+    /* border: solid 2px black; */
+    background: lightgray;
+    height: 15px;
+    width: 15px;
+    border-radius: 20px;
+}
 
+/* select-start */
+
+.select-start {
+    width: 50px;
+    /* height: 100px; */
+    display: flex;
+    /* justify-content: space-evenly; */
+    /* align-items: flex-end; */
+    /* padding: 0 10px 30px; */
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.select-start ul {
+    width: 45%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+.select-start li {
+    font-size: 20px;
+}
+
+.select-start button {
+    width: 100%;
+    height: 20px;
+    background-color: black;
+    color: #888888;
+    border-radius: 20px;
+    margin: 5px 0;
+    border: solid 1px #888888;
+}
+
+
+/* rotate buttons */
 .game-pad > *:last-child {
     width: 40%;
 }
 
-/* color and shit */
-.game-pad {
-    box-shadow: 5px 10px 18px #888888;
-    border: solid 1px black;
-    /* background: black; */
+.buttons {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
-/* 
-.game-pad .gray-border {
-    border: solid 10px #CAC9D0;
-    border-top-width: 25px;
-} */
+
+.buttons div {
+    font-size: 20px;
+    /* margin-bottom: 10px; */
+    /* height: 15px;
+    width: 15px; */
+    padding: 5px;
+    background: lightgray;
+    border: solid 1px #888888;
+    box-shadow: inset 0 0 6px 1px #888888;  
+}
+
+.buttons button {
+    height: 50px;
+    width: 50px;
+    border-radius: 90px;
+    background: #E50301;
+    color: #E50301;
+}
