Add delete route, axios call, action, and button on form

--- a/frontend/src/assets/stylesheets/main/form-column.css
+++ b/frontend/src/assets/stylesheets/main/form-column.css
@@ -249,6 +249,10 @@ aside.main-left {
         -1px 1px 0 #888888,
          1px 1px 0 #888888;
 }
+.main-left .show-join button.delete {
+    background: #E50301;
+}
+
 
 .main-left .show-join [type=text]{
     font-size: 16px;
