--- a/frontend/src/assets/stylesheets/grid-layout.css
+++ b/frontend/src/assets/stylesheets/grid-layout.css
@@ -1,6 +1,6 @@
 #content {
     display: flex; 
-    height: 100vh; 
+    /* height: 100vh;  */
     justify-content: center; 
     align-items: center; 
 }
