--- a/frontend/src/assets/stylesheets/main/form-column.css
+++ b/frontend/src/assets/stylesheets/main/form-column.css
@@ -278,8 +278,8 @@ aside.main-left {
 }
 .main-left .divider span{
     margin: 0 auto;
-    color: rgba(26, 28, 29, 0.65);
     font-size: 14px;
+    font-weight: bold;
     position: absolute;
     top: 4px;
     left: 120px;
@@ -293,13 +293,17 @@ aside.main-left {
 
 /* -------GAMES INDEX */
 .main-left .games-index {
-    margin: 70px 0 0;
+    margin: 50px 0 0;
+    max-height: 600px;
+    overflow: scroll;
 }
-.main-left .games-index .search-header {
+.main-left .games-index-wrapper .search-header {
     font-weight: bold;
     background: white;
     height: 16px;
+    padding: 0 0 10px;
     /* position: absolute; */
+    width: 100%;
 }
 .main-left .games-index ul {
     display: flex;
@@ -307,7 +311,7 @@ aside.main-left {
     border: 1px #cdcdcd solid;
     background: white;
     padding: 10px;
-    margin: 10px 0 20px;
+    margin: 30px 10px 20px 0;
     box-shadow: 5px 10px 18px #888888;
 }
 
