--- a/frontend/src/assets/stylesheets/main/game-container.css
+++ b/frontend/src/assets/stylesheets/main/game-container.css
@@ -11,6 +11,13 @@
     margin-bottom: 56px;
 }
 
+.game-container p {
+    font-size: 30px;
+    margin: 0 50px;
+    line-height: 70px;
+    
+}
+
 /* img is 668 * 1546 natively */
 
 /* 800/1546 = 51.7% */
