--- a/frontend/src/assets/stylesheets/grid-layout.css
+++ b/frontend/src/assets/stylesheets/grid-layout.css
@@ -59,9 +59,7 @@
     margin: 3px 0;
 }
 
-.red .mouth {
-    border-radius: 0 0 5px 5px;
-}
+
 .eyes div{
     /* border-style: solid; */
     border-width: 1px;
@@ -86,7 +84,7 @@
 .blue-border {border-color:#1d53f4}
 .blue .eyes div {background: #F8EF18}
 .virus.blue {border-radius: 30px 30px 50px 50px; box-shadow: inset 0px 0px 9px 0px #bcb638;}
-.virus.blue .mouth {width: 40%;}
+.virus.blue .mouth {width: 40%; height: 4px;}
 
 .yellow{background:#feef00}
 .yellow-border{border-color:#feef00}
@@ -96,6 +94,7 @@
 .red-border{border-color:#ad0101;}
 .red .eyes div {border-color: #1e1e1e; background: #52A6FE;}
 .virus.red {border-radius: 20px;}
+.red .mouth { border-radius: 0 0 5px 5px;height: 10px;}
 
 
 
