--- a/frontend/src/assets/stylesheets/main/form-column.css
+++ b/frontend/src/assets/stylesheets/main/form-column.css
@@ -7,7 +7,7 @@
 }
 
 aside.main-left {
-    
+    position: relative;
 }
 
 
@@ -17,7 +17,11 @@ aside.main-left {
 /* ---------------- */
 
 .main-left > h3 {
-    margin-bottom: 0;
+    /* margin-bottom: 0; */
+    font-family: 'Fira Sans';
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
 /* ---ERRORS */
 .main-left .errors {
@@ -31,7 +35,7 @@ aside.main-left {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    position: relative;
+    position: absolute;
 }
 .main-left .errors button {
     position: absolute;
@@ -49,7 +53,7 @@ aside.main-left {
     background: white;
     border: 1px #cdcdcd solid;
     padding: 10px;
-    margin: 10px 0 20px;
+    margin: 45px 0 20px;
     box-shadow: 5px 10px 18px #888888;
     font-family: 'Fira Sans'
 }
