--- a/frontend/src/assets/stylesheets/grid-layout.css
+++ b/frontend/src/assets/stylesheets/grid-layout.css
@@ -84,17 +84,26 @@
 .blue-border {border-color:#1d53f4}
 .blue .eyes div {background: #F8EF18}
 .virus.blue {border-radius: 30px 30px 50px 50px; box-shadow: inset 0px 0px 9px 0px #bcb638;}
-.virus.blue .mouth {width: 40%; height: 4px;}
+.virus.blue .mouth {border-radius: 0 0 5px 5px;width:55%; height: 4px;}
 
 .yellow{background:#feef00}
 .yellow-border{border-color:#feef00}
-.yellow .eyes div {background: #52A6FE;}
+.yellow .eyes div {
+    background: #52A6FE;
+}
 
 .red{background:#E50301;}
 .red-border{border-color:#ad0101;}
-.red .eyes div {border-color: #1e1e1e; background: #52A6FE;}
 .virus.red {border-radius: 20px;}
-.red .mouth { border-radius: 0 0 5px 5px;height: 10px;}
+.red .eyes div {
+    border: solid 5px #1e1e1e; background: #52A6FE; 
+    border-radius: 9000px;height: 13px; width:13px;
+    /* border-top-right-radius: 50px;
+    border-top-left-radius: 50px;
+    border-bottom-right-radius: 0px;
+    border-bottom-left-radius: 0px; */
+}
+.red .mouth { border-radius: 0 0 5px 5px;height: 8px;}
 
 
 
