--- a/frontend/src/assets/stylesheets/main/game-container.css
+++ b/frontend/src/assets/stylesheets/main/game-container.css
@@ -39,7 +39,7 @@
 .bottle.body {
     width: 425px;
     min-height: 600px;
-    max-height: 800px;
+    /* max-height: 800px; */
     border: double 10px #888888;
     box-sizing: border-box;
     background: white;
@@ -49,7 +49,7 @@
 .curtain {
     background: black;
     color: #e5e5e5;
-    height: 100vw;
+    height: 815px;
     padding-top: 70px;
 }
 
