Add ActiveGameInfo component when game is playing

--- a/frontend/src/assets/stylesheets/manifest-import.css
+++ b/frontend/src/assets/stylesheets/manifest-import.css
@@ -11,3 +11,4 @@
 @import './grid-layout.css';
 @import './main/game-container.css';
 @import './main/details-widget.css';
+@import './main/active-game-info.css';
