--- a/frontend/src/assets/stylesheets/main/form-column.css
+++ b/frontend/src/assets/stylesheets/main/form-column.css
@@ -311,15 +311,15 @@ aside.main-left {
 
 /* -------GAMES INDEX */
 .main-left .games-index {
-    margin: 50px 0 0;
-    max-height: 600px;
+    margin: 0 0 0;
+    max-height: 300px;
     overflow: scroll;
 }
 .main-left .games-index-wrapper .search-header {
     font-weight: bold;
     background: white;
     height: 16px;
-    padding: 0 0 10px;
+    padding: 15px 0 15px;
     /* position: absolute; */
     width: 100%;
 }
@@ -329,7 +329,7 @@ aside.main-left {
     border: 1px #cdcdcd solid;
     background: white;
     padding: 10px;
-    margin: 30px 10px 20px 0;
+    margin: 0 10px 20px 0;
     box-shadow: 5px 10px 18px #888888;
 }
 
